@@ -21,7 +21,9 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * User
@@ -110,10 +112,14 @@ public class User extends AbstractEntity<Integer> implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
+        if (role == null || role.getAuthorities() == null) {
+            return Collections.emptyList();
+        }
+
         final List<SimpleGrantedAuthority> authorities = role.getAuthorities()
                 .stream()
                 .map(authority -> new SimpleGrantedAuthority(authority.getName()))
-                .toList();
+                .collect(Collectors.toList());
         authorities.add(new SimpleGrantedAuthority("ROLE_" + role.getName()));
         return authorities;
     }
@@ -121,6 +127,16 @@ public class User extends AbstractEntity<Integer> implements UserDetails {
     @Override
     public String getUsername() {
         return email;
+    }
+
+    @Override
+    public String getPassword() {
+        return password;
+    }
+
+    public User setPassword(String password) {
+        this.password = password;
+        return this;
     }
 
     public User setName(Name name) {
@@ -135,11 +151,6 @@ public class User extends AbstractEntity<Integer> implements UserDetails {
 
     public User setPhone(String phone) {
         this.phone = phone;
-        return this;
-    }
-
-    public User setPassword(String password) {
-        this.password = password;
         return this;
     }
 
